# basic_tech_cg

./: CMakeLists.txt  assignment.cpp  main.cpp
libs/glloadgen/: CMakeLists.txt
